--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "html-react-parser": "^5.1.10",
     "classnames": "^2.3.1",
+    "html-react-parser": "^5.1.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
@@ -39,6 +39,7 @@
     ]
   },
   "devDependencies": {
-    "sass": "^1.70.0"
+    "sass": "^1.49.10",
+    "sass-math": "^1.0.0"
   }
 }
