--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "classnames": "^2.3.1",
     "react-transition-group": "^4.4.1",
     "html-react-parser": "^5.1.10",
+    "@reduxjs/toolkit": "2.2.6",
+    "react-redux": "9.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
